--- a/report/comparision.tex
+++ b/report/comparision.tex
@@ -59,7 +59,6 @@ The testing was conducted using Microsoft SQL Server and MySQL databases, focusi
 
 \newpage
 
-
 \section{Bytebase}
 
 Modern web-based tool with a clean interface.
@@ -97,6 +96,7 @@ Bytebase code was simple to learn and interface seems great for teams, the free 
 Migration tracking is excellent, and the web interface is intuitive.
 Version control is not as robust as traditional Git-based systems, which may be a drawback for some teams.hat values simplicity, are comfortable with Docker containers, and don't mind the additional infrastructure setup requirements.\\
 
+\newpage
 \section{Liquibase}
 
 Command-line tool that's been around for years. Uses text files to track database changes, known to be used in automation.
@@ -137,6 +137,7 @@ Integration is fully with code and CI/CD pipelines so it can be easily incorpora
 There is no web interface, which may be a drawback for teams that prefer visual tools.
 It should be chosen if you need maximum database support and command-line integration is needed.\\
 
+\newpage
 \section{Redgate}
 
 Application based tool that provides visual tools focused on SQL Server.
@@ -262,22 +263,9 @@ Audit Trail & \checkmark & Basic & \checkmark \\
 \textbf{Quick Summary:}
 
 \begin{itemize}
-    \item \textbf{Bytebase} - Best for teams who want something modern and easy to use
-    \item \textbf{Liquibase} - Best for developers who need maximum database support and automation
-    \item \textbf{Redgate} - Best for SQL Server shops with budget for premium tools
-\end{itemize}
-
-\textbf{What to consider:} For simple migrations, all three work fine. For complex stuff, Liquibase and Redgate have more features. Small teams should try Bytebase first - it's the easiest to learn. Large companies might prefer Liquibase for its flexibility or Redgate for SQL Server environments. Remember that Liquibase might need extra network setup in corporate environments.
-
-\textbf{Bottom line:} Pick based on your database type, team size, and how much complexity you need. Start with the free versions to see what works for your team.
-
-\newpage
-\section{References}
-
-\begin{itemize}
-    \item Bytebase Official Documentation: \url{https://bytebase.com/docs}
-    \item Liquibase Documentation: \url{https://docs.liquibase.com}
-    \item Redgate Documentation: \url{https://documentation.red-gate.com}
+    \item \textbf{Bytebase} - Best for modern, easy to use interface with strong team collaboration features.
+    \item \textbf{Liquibase} - Best for developers who need maximum database support and automation.
+    \item \textbf{Redgate} - Best for SQL Server environments with budget for premium tools. With the want to use visual application features (Microsoft Software Style).
 \end{itemize}
 
 \end{document}
